fdo#81102: fix .doc import of blank even page header

Honour the "different odd & even pages" header/footer setting from the
doc file even if there is no content for an even page header or footer.

Conflicts:
	sw/qa/extras/ww8import/ww8import.cxx
Reviewed on:
	https://gerrit.libreoffice.org/10191

(cherry picked from commit b5bb15013617c6b9f1cdd089acae0bfb7104fa3a)
Signed-off-by: Luboš Luňák <l.lunak@collabora.com>

Conflicts:
	sw/qa/extras/ww8import/ww8import.cxx

Change-Id: I963f7f7189e399b1d859db0788fbfd291e868c54